<resources>
    <string name="app_name">Actividad_3</string>
    <string name="tvVersionAndroidLB">Versión de Android:</string>
    <string name="tvVersionAndroid"></string>
    <string name="tvLight">2. Luz:</string>
    <string name="btnOff">Apagar</string>
    <string name="btnOn">Encender</string>
    <string name="tvLevelBatterry">3. Nivel de Batería:</string>
    <string name="tvLevelBatterry_2"></string>
    <string name="tvStorage">4. Almacenamiento:</string>
    <string name="etNameFile">Nombre del Archivo</string>
    <string name="btnSaveFile">Guardar Archivo</string>
    <string name="tvConnectionLB">5. Estado de Conexión:</string>
    <string name="tvState"></string>
    <string name="btnBlutu">bluetooth</string>
    <string name="btnCamara">Camara</string>

    <string name="tvBluetoothStatus">Estado de Bluetooth:</string>
    <string name="btnBlOn">Encender</string>
    <string name="btnBlOff">Apagar</string>
    <string name="state"></string>
    <string name="tvDispositivos">Dispositivos Vinculados:</string>
    <string name="listVinculados"></string>
    <string name="btnListVinculados">Listar Vinculados</string>


    <string name="tvCamara">TOMA DE FOTO</string>

    <string name="tomarFt">Tomar Foto</string>
    <string name="guardarFt">Guardar Foto</string>



</resources>