<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/main">

    <!-- TextView para la versión de Android -->
    <TextView
        android:id="@+id/tvVersionAndroidLB"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:text="@string/tvVersionAndroidLB" />

    <TextView
        android:id="@+id/tvVersionAndroid"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:text="@string/tvVersionAndroid" />

    <TextView
        android:id="@+id/tvLight"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:text="@string/tvLight" />

    <!-- TableRow para los botones -->


    <TableRow
        android:layout_width="366dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnOff"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:text="@string/btnOff" />

        <Button
            android:id="@+id/btnOn"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:text="@string/btnOn" />
    </TableRow>


    <TextView
        android:id="@+id/tvLevelBatteryLB"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:text="@string/tvLevelBatterry" />


    <TextView
        android:id="@+id/tvLevelBattery"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:text="@string/tvLevelBatterry_2" />


    <ProgressBar
        android:id="@+id/pbLevelBattery"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:max="100"
        android:progress="50" />

    <TextView
        android:id="@+id/tvStorageLB"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/tvStorage" />

    <EditText
        android:id="@+id/etNameFile"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:hint="Enter file name"
        android:minHeight="48dp" />

    <ImageButton
        android:id="@+id/btnSaveFile"
        android:layout_width="369dp"
        android:layout_height="53dp"
        android:text="@string/btnSaveFile"
        android:minHeight="48dp"
        android:contentDescription="Save File"/>

    <TextView
        android:id="@+id/tvConnectionLB"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:text="@string/tvConnectionLB" />

    <TextView
        android:id="@+id/tvState"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:text="@string/tvState"/>

    <Button
        android:id="@+id/bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBlutu" />

    <Button
        android:id="@+id/camara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCamara" />

</LinearLayout>